force-app/main/default/objects/SKP_Minimum_Mapping__c/SKP_Minimum_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SKP Minimum Mapping</label>
</CustomObject>