force-app/main/default/objects/SKP_Minimum_Mapping__c/fields/Minimum_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Level__c</fullName>
    <label>Minimum Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>