force-app/main/default/objects/SKP_Minimum_Mapping__c/fields/Minimum_Type__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Type__c</fullName>
    <label>Minimum Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>